<resources>
    <string name="app_name">Okada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_login_fragment">Hello LOGIN fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_register_fragment">Hello REGISTER fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello HOME fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter your E-mail</string>
    <string name="prompt_password">Type your password</string>
    <string name="prompt_re_enter_password">Re-type your password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_have_sign_up">Or click here to signup…</string>
    <string name="action_already_signed_up">Or click here to login…</string>
    <string name="welcome">"Welcome!"</string>
    <!-- Strings related to register -->
    <string name="create_profile">"Create Profile"</string>
    <string name="login_message">Let\'s start by logging into your account</string>
    <string name="register_message">Let\'s start with creating your account</string>
    <string name="signup_message">Let\'s start with a new account signup</string>
    <string name="firstname_message">Firstname</string>
    <string name="lastname_message">Lastname</string>
    <string name="email_address_message">Email Address</string>
    <string name="id_num_message">Biometric ID</string>
    <string name="invalid_string">Must not contain numeric characters</string>

    <!-- Display messages to users -->
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_matching_password">Passwords must match</string>
    <string name="user_profile_exists">"A user profile already exists for this user"</string>
    <string name="profile_created">"Profile has been created"</string>
    <string name="onboarding_pg1_title">"Trustworthy and reliable"</string>
    <string name="onboarding_pg1_desc">"All our drivers have been thoroughly vetted to ensure their reliability"</string>
    <string name="onboarding_pg2_title">"Your pickup"</string>
    <string name="onboarding_pg2_desc">"Drivers can pick up anything from documents, medicine and even groceries"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_account">My Account</string>
    <string name="rationale_message_for_location">App requires Location permissions to function</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="returned_from_app_settings_to_activity" formatted="true">Returned from Phone Settings: %s</string>
    <string name="no_logged_in_user">No logged in user</string>
    <string name="nav_header_rating">Nav header rating</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_profile">Profile</string>
    <string name="sign_out_msg">Do you really want to sign out?</string>
    <string name="cancel_string">Cancel</string>
    <string name="slidingUpPickUp">Select a route</string>
    <string name="chooseSavedPlace">Choose a saved place</string>
    <string name="title_activity_request_driver">RequestDriverActivity</string>
    <string name="pickup">Pickup location</string>
    <string name="dropoff">Drop off location</string>
    <string name="minText">Min</string>
    <string name="pay_by_cash">Pay by cash</string>
    <string name="confirm_route">Confirm Route</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="meet_driver_here">Meet biker here</string>
    <string name="finding_your_ride">Finding your ride</string>
    <string name="drivers_not_found">No drivers found</string>
    <string name="asciiDot">■</string>
    <string name="any_pickup_notes">Any pickup notes?</string>
    <string name="minaway">MIN\nAWAY</string>
    <string name="decline">Cancel</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="trip_complete">Trip Complete</string>
    <string name="receipt">Receipt</string>
    <string name="pickup_receipt">Pickup Receipt</string>
    <string name="base_fare">Base Fare</string>
    <string name="other_charges">Other charges</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="fee">Fee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>