<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.okada.rider.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_requestDriverActivity"
            app:destination="@id/requestDriverActivity" />
        <action
            android:id="@+id/action_navigation_home_to_requestDriverFragment"
            app:destination="@id/requestDriverFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.okada.rider.android.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.okada.rider.android.ui.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />
    <activity
        android:id="@+id/requestDriverActivity"
        android:name="com.okada.rider.android.ui.RequestDriverActivity"
        android:label="activity_request_driver"
        tools:layout="@layout/activity_request_driver" />
    <fragment
        android:id="@+id/requestDriverFragment"
        android:name="com.okada.rider.android.ui.home.RequestDriverFragment"
        android:label="RequestDriverFragment" />
</navigation>